--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                         </div>
                     </div>
                     <div class="contact-form reveal-right">
-                        <form id="contactForm">
+                        <form id="contactForm" action="https://formspree.io/f/mjkwqowb" method="POST">
                             <div class="form-group">
                                 <label for="name">Nom complet *</label>
                                 <input type="text" id="name" name="name" required>
