Ajout mentions légales Footer

--- a/index.html
+++ b/index.html
@@ -294,7 +294,12 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Laetitia Vanderheyden. Tous droits réservés.</p>
-              <p> Adminetech SRL</p>
+                <p>
+                  Adminetech SRL • BE1012.752.452<br>
+                  Rue Brouck au Tilleul 50, 4690 Glons, Belgique<br>
+                  <a href="mailto:info@adminetech.be">info@adminetech.be</a> • 
+                  <a href="tel:+32498788354">+32 498 78 83 54</a>
+                </p>
             </div>
         </div>
     </footer>
