--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             </div>
                             <div class="contact-item">
                                 <i class="fas fa-envelope"></i>
-                                <p>contact@laetitia-vanderheyden.be</p>
+                                <a href="mailto:contact@laetitia-vanderheyden.be">contact@laetitia-vanderheyden.be</a>
                             </div>
                             <div class="contact-item">
                                 <i class="fas fa-map-marker-alt"></i>
