--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
                                 <label for="privacy">J'accepte la <a href="privacy.html">politique de confidentialité</a> *</label>
                             </div>
                             <button type="submit" class="btn btn-primary btn-full">Envoyer</button>
+                            <p id="formMessage" style="margin-top: 1rem; color: #7DA87B; font-weight: 500;"></p>
                         </form>
                     </div>
                 </div>
