corrections images + fichiers SEO robots.txt et sitemap

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laetitia Vanderheyden | Copilote Business</title>
     <meta name="description" content="Reprenez le contrôle de votre administratif avec Laetitia Vanderheyden, votre copilote business. Organisation, digitalisation et outils malins pour indépendants, PME & ASBL.">
+
+    <!-- SEO enrichi -->
+    <link rel="canonical" href="https://www.laetitia-vanderheyden.be/">
+    <meta property="og:title" content="Laetitia Vanderheyden | Copilote Business pour indépendants et PME en Belgique">
+    <meta property="og:description" content="Organisation, digitalisation et accompagnement personnalisé pour indépendants, PME et ASBL. Diagnostic gratuit disponible.">
+    <meta property="og:image" content="https://www.laetitia-vanderheyden.be/public/og-image.jpg">
+    <meta property="og:url" content="https://www.laetitia-vanderheyden.be/">
+    <meta property="og:type" content="website">
+
+    <!-- Liens CSS existants -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animations.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +26,7 @@
     <header id="header">
         <nav class="container">
             <div class="logo">
-                <a href="#"><img src="https://raw.githubusercontent.com/Lachacha-copil/Assets/main/Black%20Logo(1).png" alt="Laetitia Vanderheyden" height="250px"></a>
+                <a href="#"><img src="public/logo-laetitia-vanderheyden-noir.png" alt="Laetitia Vanderheyden" height="250px"></a>
             </div>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
@@ -46,7 +56,7 @@
                     </div>
                 </div>
                 <div class="hero-image reveal-right">
-                    <img src="https://raw.githubusercontent.com/Lachacha-copil/Assets/main/034oknb.jpg" alt="Laetitia Vanderheyden" style="filter: grayscale(100%);">
+                    <img src="public/copilote-laetitia-vanderheyden.jpg" alt="copilote business pour indépendants en Belgique" style="filter: grayscale(100%);">
                 </div>
             </div>
         </section>
@@ -158,7 +168,7 @@
             <div class="container">
                 <div class="about-content">
                     <div class="about-image reveal-left">
-                        <img src="https://raw.githubusercontent.com/Lachacha-copil/Assets/main/067oknb.jpg" alt="Laetitia Vanderheyden" style="filter: grayscale(100%);">
+                        <img src="public/copilote-laetitia-adminetech.jpg" alt="Laetitia Vanderheyden copilote business pour indépendants en Belgique" style="filter: grayscale(100%);">
                     </div>
                     <div class="about-text reveal-right">
                         <h2>À propos</h2>
@@ -281,7 +291,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="https://raw.githubusercontent.com/Lachacha-copil/Assets/refs/heads/main/white%20logo(1).png" alt="Logo Laetitia Vanderheyden">
+                    <img src="public/logo-laetitia-vanderheyden-blanc.png" alt="Logo Laetitia Vanderheyden">
                 </div>
                 <div class="footer-links">
                     <ul>
