--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
     <header id="header">
         <nav class="container">
             <div class="logo">
-                <a href="index.html"><img src="https://raw.githubusercontent.com/Lachacha-copil/Assets/main/Black%20Logo(1).png" alt="Laetitia Vanderheyden" height="250px"></a>
+                <a href="index.html"><img src="public/logo-laetitia-vanderheyden-noir.png" alt="Laetitia Vanderheyden" height="250px"></a>
             </div>
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
@@ -124,7 +124,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="https://raw.githubusercontent.com/Lachacha-copil/Assets/refs/heads/main/white%20logo(1).png" alt="Logo Laetitia Vanderheyden">
+                    <img src="public/logo-laetitia-vanderheyden-blanc.png" alt="Logo Laetitia Vanderheyden">
                 </div>
                 <div class="footer-links">
                     <ul>
