ajout script index problème Google

--- a/index.html
+++ b/index.html
@@ -321,5 +321,10 @@
     </a>
 
     <script src="js/main.js"></script>
+    <script>
+      if (window.location.pathname === '/index.html') {
+        window.location.replace('/');
+      }
+    </script>
 </body>
 </html>
