--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                   <a href="mailto:info@adminetech.be">info@adminetech.be</a> • 
                   <a href="tel:+32498788354">+32 498 78 83 54</a>
                 </p>
-                <p class="made-by">Site créé avec 💗 par Laetitia</p>
+                <p class="made-by">Site créé avec <span class="heart">❤️</span> par Laetitia</p>
             </div>
         </div>
     </footer>
