--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                     <i class="fas fa-chevron-down faq-toggle"></i>
                 </div>
                 <div class="faq-answer">
-                    <p><strong>Ma double casquette :</strong> consultante ET développeuse. Je ne me contente pas de recommander des outils existants - je peux aussi créer des solutions sur mesure si nécessaire. Mon background comptable me permet de comprendre vraiment vos contraintes administratives.</p>
+                    <p><strong>Ma double casquette :</strong> consultante ET créatrice. Je ne me contente pas de recommander des outils existants - je peux aussi créer des solutions sur mesure si nécessaire. Mon background comptable me permet de comprendre vraiment vos contraintes administratives.</p>
                 </div>
             </div>
         </div>
