--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="container">
                 <div class="about-content">
                     <div class="about-image reveal-left">
-                        <img src="public/copilote-laetitia-adminetech.jpg" alt="Laetitia Vanderheyden copilote business pour indépendants en Belgique" style="filter: grayscale(100%);">
+                        <img src="https://images.pexels.com/photos/8386440/pexels-photo-8386440.jpeg" alt="Automatisation et transformation digitale" style="width: 100%; height: 500px; object-fit: cover; border-radius: 20px; box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);">
                     </div>
                     <div class="about-text reveal-right">
                         <h2>À propos</h2>
@@ -442,6 +442,7 @@
                         <li><a href="#services">Services</a></li>
                         <li><a href="#approach">Approche</a></li>
                         <li><a href="#about">À propos</a></li>
+                        <li><a href="#faq">FAQ</a></li>
                         <li><a href="#contact">Contact</a></li>
                         <li><a href="privacy.html">Politique de confidentialité</a></li>
                     </ul>
