modif photo à propos v4

--- a/privacy.html
+++ b/privacy.html
@@ -28,6 +28,7 @@
                 <li><a href="index.html#approach" class="nav-link">Approche</a></li>
                 <li><a href="index.html#projects" class="nav-link">Projets</a></li>
                 <li><a href="index.html#about" class="nav-link">À propos</a></li>
+                <li><a href="index.html#faq" class="nav-link">FAQ</a></li>
                 <li><a href="index.html#contact" class="nav-link contact-btn">Contact</a></li>
             </ul>
         </nav>
@@ -131,6 +132,7 @@
                         <li><a href="index.html#services">Services</a></li>
                         <li><a href="index.html#approach">Approche</a></li>
                         <li><a href="index.html#about">À propos</a></li>
+                        <li><a href="index.html#faq">FAQ</a></li>
                         <li><a href="index.html#contact">Contact</a></li>
                         <li><a href="privacy.html">Politique de confidentialité</a></li>
                     </ul>
