--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="container">
                 <div class="about-content">
                     <div class="about-image reveal-left">
-                        <img src="https://images.pexels.com/photos/3861969/pexels-photo-3861969.jpeg" alt="Innovation et solutions créatives" style="width: 100%; height: 500px; object-fit: cover; border-radius: 20px; box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);">
+                        <img src="https://images.pexels.com/photos/574071/pexels-photo-574071.jpeg" alt="Environnement de travail moderne et organisé" style="width: 100%; height: 500px; object-fit: cover; border-radius: 20px; box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);">
                     </div>
                     <div class="about-text reveal-right">
                         <h2>À propos</h2>
