remplacement carte projet tableaux de bord

--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                         <p>Sélection et mise en place d'outils adaptés</p>
                     </div>
                     <div class="project-card reveal">
-                        <i class="fas fa-exchange-alt"></i>
-                        <h3>Migration de données</h3>
-                        <p>Transfert sécurisé et structuré des données</p>
+                        <i class="fas fa-tachometer-alt"></i>
+                        <h3>Tableaux de bord</h3>
+                        <p>Création de dashboards temps réel pour piloter votre activité en un coup d'œil</p>
                     </div>
                     <div class="project-card reveal">
                         <i class="fas fa-cogs"></i>
