--- a/index.html
+++ b/index.html
@@ -401,6 +401,9 @@
                             <a href="https://www.linkedin.com/in/laetitia-vanderheyden-adminetech" class="social-link" target="_blank">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
+                            <a href="https://www.facebook.com/people/Laetitia-Vanderheyden-Copilote-Business/61576964253931/" class="contact-social-link" target="_blank">
+                                <i class="fab fa-facebook-f"></i>
+                            </a>
                         </div>
                     </div>
                     <div class="contact-form reveal-right">
