correction icone in v3

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                             <a href="https://www.linkedin.com/in/laetitia-vanderheyden-adminetech" class="social-link" target="_blank">
                                 <i class="fas fa-briefcase"></i>
                             </a>
-                            <a href="https://www.facebook.com/people/Laetitia-Vanderheyden-Copilote-Business/61576964253931/" class="contact-social-link" target="_blank">
+                            <a href="https://www.facebook.com/people/Laetitia-Vanderheyden-Copilote-Business/61576964253931/" class="social-link" target="_blank">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
                         </div>
