--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                         </div>
                         <div class="social-links">
                             <a href="https://www.linkedin.com/in/laetitia-vanderheyden-adminetech" class="social-link" target="_blank">
-                                <i class="fas fa-briefcase"></i>
+                                <i class="fab fa-linkedin-in"></i>
                             </a>
                             <a href="https://www.facebook.com/people/Laetitia-Vanderheyden-Copilote-Business/61576964253931/" class="social-link" target="_blank">
                                 <i class="fab fa-facebook-f"></i>
