ajout liste choix forms v2

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
         </div>
 
         <div class="form-group">
-            <label for="interest">Comment pouvons-nous vous aider ? *</label>
+            <label for="interest">Comment puis-je vous aider ? *</label>
             <select id="interest" name="interest" required>
                 <option value="">Sélectionnez une option...</option> <option value="optimisation_processus">Optimisation de mes processus</option>
                 <option value="digitalisation_admin">Digitalisation de mon administratif</option>
