ajout section formations-conf

--- a/index.html
+++ b/index.html
@@ -185,6 +185,29 @@
             </div>
         </section>
 
+        <section id="training-conference" class="section-padding bg-light"> <div class="container">
+        <div class="section-header reveal">
+            <h2>Formations & Conférences</h2>
+            <p>Partagez les clés de l'efficacité administrative et de l'intégration technologique</p>
+        </div>
+        <div class="training-content">
+            <div class="training-text reveal-left">
+                <h3>Boostez vos équipes avec mon expertise</h3>
+                <p>Je propose des formations et des conférences sur mesure, conçues pour les entreprises, indépendants et associations qui souhaitent maîtriser les outils et les méthodes d'une gestion administrative moderne et performante. De la digitalisation aux principes de l'IA appliquée au business, mes interventions sont pratiques et orientées résultats.</p>
+                <ul>
+                    <li><i class="fas fa-chalkboard-teacher"></i> Ateliers pratiques sur la digitalisation</li>
+                    <li><i class="fas fa-robot"></i> Séances de découverte et d'application de l'IA pour les PME</li>
+                    <li><i class="fas fa-users"></i> Conférences inspirantes sur l'efficacité business</li>
+                </ul>
+                <a href="#contact" class="btn btn-primary mt-3">Demandez un programme personnalisé</a>
+            </div>
+            <div class="training-media reveal-right">
+                <img src="public/formation-ia-consultance-LV.jpg" alt="Laetitia en conférence/formation" class="img-fluid">
+                </div>
+        </div>
+    </div>
+</section>
+
         <section id="approach" class="section-padding bg-light">
             <div class="container">
                 <div class="approach-content">
