ajout section formations-conf v2

--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
                 <p>Je propose des formations et des conférences sur mesure, conçues pour les entreprises, indépendants et associations qui souhaitent maîtriser les outils et les méthodes d'une gestion administrative moderne et performante. De la digitalisation aux principes de l'IA appliquée au business, mes interventions sont pratiques et orientées résultats.</p>
                 <ul>
                     <li><i class="fas fa-chalkboard-teacher"></i> Ateliers pratiques sur la digitalisation</li>
-                    <li><i class="fas fa-robot"></i> Séances de découverte et d'application de l'IA pour les PME</li>
+                    <li><i class="fas fa-robot"></i> Séances de découverte et d'application de l'IA</li>
                     <li><i class="fas fa-users"></i> Conférences inspirantes sur l'efficacité business</li>
                 </ul>
-                <a href="#contact" class="btn btn-primary mt-3">Demandez un programme personnalisé</a>
+                <a href="https://tidycal.com/pack-audit-express/programme-personnalise-formation-conference" class="btn btn-primary mt-3" target="_blank" rel="noopener noreferrer">Demandez un programme personnalisé</a>
             </div>
             <div class="training-media reveal-right">
                 <img src="public/formation-ia-consultance-LV.jpg" alt="Laetitia en conférence/formation" class="img-fluid">
