ajout dernier article FB

--- a/index.html
+++ b/index.html
@@ -466,6 +466,24 @@
                 </div>
             </div>
         </section>
+
+        <section id="latest-facebook-post" class="section-padding bg-light">
+    <div class="container">
+        <div class="section-header reveal">
+            <h2>Mes dernières actualités</h2>
+            <p>Retrouvez mes réflexions et conseils récents sur Facebook.</p>
+        </div>
+        <div class="facebook-post-container reveal">
+            <div class="video-responsive">
+                <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2F61576964253931%2Fvideos%2F1308715970679582%2F&show_text=false&width=560&t=0" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+            </div>
+
+            <div class="text-center mt-4">
+                <a href="https://www.facebook.com/people/Laetitia-Vanderheyden-Copilote-Business/61576964253931/" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Voir toutes mes actualités sur Facebook</a>
+            </div>
+        </div>
+    </div>
+</section>
     </main>
 
     <footer>
