enrichissement site LV v7

--- a/index.html
+++ b/index.html
@@ -629,6 +629,7 @@
                 <div class="footer-links">
                     <ul>
                         <li><a href="#services">Services</a></li>
+                        <li><a href="#conseils">Conseils</a></li>
                         <li><a href="#approach">Approche</a></li>
                         <li><a href="#about">À propos</a></li>
                         <li><a href="#faq">FAQ</a></li>
