enrichissement site LV v8

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                 </div>
                 <div class="services-grid">
                     <div class="service-card reveal">
+                        <div class="service-content">
                         <div class="service-icon">
                             <i class="fas fa-stethoscope"></i>
                         </div>
@@ -109,6 +110,7 @@
                         <div class="benefit-subtle">On y voit plus clair ensemble</div>
                     </div>
                     <div class="service-card reveal">
+                        <div class="service-content">
                         <div class="service-icon">
                             <i class="fas fa-lightbulb"></i>
                         </div>
@@ -117,6 +119,7 @@
                         <div class="benefit-subtle">Enfin des outils qui vous ressemblent</div>
                     </div>
                     <div class="service-card reveal">
+                        <div class="service-content">
                         <div class="service-icon">
                             <i class="fas fa-hands-helping"></i>
                         </div>
@@ -125,6 +128,7 @@
                         <div class="benefit-subtle">Transition en douceur garantie</div>
                     </div>
                     <div class="service-card reveal">
+                        <div class="service-content">
                         <div class="service-icon">
                             <i class="fas fa-seedling"></i>
                         </div>
