--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <meta property="og:type" content="website">
 
     <!-- Liens CSS existants -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="css/style.css?v=1.1">
+    <link rel="stylesheet" href="css/animations.css?v=1.1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
@@ -685,7 +685,7 @@
         <i class="fas fa-arrow-up"></i>
     </a>
 
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=1.1"></script>
     <script>
         // Redirection pour tous les cas d'accès à index.html
         if (window.location.pathname === '/index.html' || 
