--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <meta property="og:type" content="website">
 
     <!-- Liens CSS existants -->
-    <link rel="stylesheet" href="css/style.css?v=1.4">
+    <link rel="stylesheet" href="css/style.css?v=1.5">
     <link rel="stylesheet" href="css/animations.css?v=1.1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -347,10 +347,10 @@
                     <li><i class="fas fa-robot"></i> Découverte progressive de l'IA appliquée</li>
                     <li><i class="fas fa-users"></i> Conférences inspirantes sur l'efficacité business</li>
                 </ul>
-                <a href="https://tidycal.com/pack-audit-express/programme-personnalise-formation-conference" class="btn btn-primary mt-3" target="_blank" rel="noopener noreferrer">Demandez un programme personnalisé</a>
             </div>
             <div class="training-media reveal-right">
                 <img src="public/formation-ia-consultance-LV.jpg" alt="Laetitia en conférence/formation" class="img-fluid">
+                <a href="https://tidycal.com/pack-audit-express/programme-personnalise-formation-conference" class="btn btn-primary mt-3" target="_blank" rel="noopener noreferrer">Demandez un programme personnalisé</a>
                 </div>
         </div>
     </div>
@@ -639,7 +639,7 @@
         </div>
         <div class="facebook-post-container reveal">
             <div class="video-responsive">
-                <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2F61576964253931%2Fvideos%2F1308715970679582%2F&show_text=true&width=560&t=0" width="560" height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true" loading="lazy"></iframe>
+                <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2F61576964253931%2Fvideos%2F1308715970679582%2F&show_text=true&width=560&t=0" width="560" height="429" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true" loading="lazy" onload="this.style.opacity='1'" onerror="this.style.display='none'"></iframe>
             </div>
 
             <div class="text-center mt-4">
@@ -685,7 +685,7 @@
         <i class="fas fa-arrow-up"></i>
     </a>
 
-    <script src="js/main.js?v=1.1"></script>
+    <script src="js/main.js?v=1.2"></script>
     <script>
         // Redirection pour tous les cas d'accès à index.html
         if (window.location.pathname === '/index.html' || 
