enrichissement site LV v22

--- a/index.html
+++ b/index.html
@@ -648,6 +648,19 @@
         </div>
     </div>
 </section>
+
+        <section id="partners" class="section-padding">
+            <div class="container">
+                <div class="partners-grid reveal">
+                    <div class="partner-logo">
+                        <img src="public/logo demirtechnics.png" alt="Logo Demirtechnics" loading="lazy">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="public/Logo_Adminetech_Bleu_2024.png" alt="Logo Adminetech" loading="lazy">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
