enrichissement site LV v23

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <div class="hero-image reveal-right">
-                    <img src="public/copilote-laetitia-vanderheyden.jpg" alt="copilote business pour indépendants en Belgique" style="filter: grayscale(100%);">
+                    <img src="public/copilote-laetitia-vanderheyden.jpg" alt="copilote business pour indépendants en Belgique">
                 </div>
             </div>
         </section>
