amélioration verticalité scrolling

--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Laetitia Vanderheyden. Tous droits réservés.</p>
-                <p><strong>Consultance administrative & optimisation des processus pour TPE, PME et ASBL à Liège et en Wallonie.</strong> Audit, digitalisation, gestion documentaire, créances et formations IA appliquée.</p>
+                <p class="footer-seo-text">Consultance administrative & optimisation des processus pour TPE, PME et ASBL à Liège et en Wallonie. Audit, digitalisation, gestion documentaire, créances et formations IA appliquée.</p>
                 <p>
                   Adminetech SRL • BE1012.752.452<br>
                   Rue Brouck au Tilleul 50, 4690 Glons, Belgique<br>
