amélioration verticalité scrolling v4

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <link rel="preload" href="public/copilote-laetitia-vanderheyden.jpg" as="image">
     
     <!-- Liens CSS existants -->
-    <link rel="stylesheet" href="css/style.css?v=1.6">
+    <link rel="stylesheet" href="css/style.css?v=1.7">
     <link rel="stylesheet" href="css/animations.css?v=1.1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -685,6 +685,13 @@
                 </div>
             </div>
         </section>
+
+        <!-- Phrase SEO entre partenaires et footer -->
+        <section class="seo-phrase-section">
+            <div class="container">
+                <p class="seo-phrase-text">Consultance administrative & optimisation des processus pour TPE, PME et ASBL à Liège et en Wallonie. Audit, digitalisation, gestion documentaire, créances et formations IA appliquée.</p>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -704,9 +711,6 @@
                         <li><a href="privacy.html">Politique de confidentialité</a></li>
                     </ul>
                 </div>
-            </div>
-            <div class="footer-seo-section">
-                <p class="footer-seo-text">Consultance administrative & optimisation des processus pour TPE, PME et ASBL à Liège et en Wallonie. Audit, digitalisation, gestion documentaire, créances et formations IA appliquée.</p>
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Laetitia Vanderheyden. Tous droits réservés.</p>
