ajout logo partenaire

--- a/index.html
+++ b/index.html
@@ -682,6 +682,9 @@
                     <div class="partner-logo">
                         <img src="public/Logo_Adminetech_Bleu_2024.png" alt="Logo Adminetech" loading="lazy">
                     </div>
+                    <div class="partner-logo">
+                        <img src="public/logo_produweb.svg" alt="Logo Produweb" loading="lazy">
+                    </div>
                 </div>
             </div>
         </section>
@@ -720,7 +723,7 @@
                   <a href="mailto:info@adminetech.be">info@adminetech.be</a> • 
                   <a href="tel:+32498788354">+32 498 78 83 54</a>
                 </p>
-                <p class="made-by">Site créé avec <span class="heart">❤️</span> par Laetitia</p>
+                <p class="made-by">Site créé avec <span class="heart">❤️</span> par LV</p>
             </div>
         </div>
     </footer>
