ajout logo partenaire v3

--- a/index.html
+++ b/index.html
@@ -683,7 +683,10 @@
                         <img src="public/Logo_Adminetech_Bleu_2024.png" alt="Logo Adminetech" loading="lazy">
                     </div>
                     <div class="partner-logo">
-                        <img src="public/logo_produweb.svg" alt="Logo Produweb" loading="lazy" style="max-height: 80px; width: auto;">
+                        <img src="public/logo_produweb.svg" alt="Logo Produweb" loading="lazy" style="max-height: 80px; width: auto; border: 2px solid red; background: yellow;">
+                    </div>
+                    <div class="partner-logo">
+                        <img src="public/logo demirtechnics.png" alt="Test logo" loading="lazy" style="max-height: 80px; width: auto; border: 2px solid blue;">
                     </div>
                 </div>
             </div>
