ajout logo partenaire v5

--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
                         <img src="public/Logo_Adminetech_Bleu_2024.png" alt="Logo Adminetech" loading="lazy">
                     </div>
                     <div class="partner-logo">
-                        <img src="public/logo_produweb.svg" alt="Logo Produweb" loading="lazy" style="height: 80px; width: auto;">
+                        <img src="public/logo_produweb.svg" alt="Logo Produweb" loading="lazy" style="max-height: 80px; width: auto;">
                     </div>
                 </div>
             </div>
