ajout logo partenaire v12

--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
                     <div class="partner-logo">
                         <img src="public/Logo_Adminetech_Bleu_2024.png" alt="Logo Adminetech" loading="lazy">
                     </div>
-                    <div class="partner-logo">
+                    <div class="partner-logo" style="align-items: flex-start; padding-top: 10px;">
                         <img src="public/logo_produweb_centre.svg" alt="Logo Produweb" loading="lazy" style="max-height: 80px; width: auto; height: 80px;">
                     </div>
                 </div>
