ajout logo partenaire v14 + amélioration formulaire de contact v3

--- a/index.html
+++ b/index.html
@@ -647,9 +647,9 @@
             <input type="tel" id="phone" name="phone" required placeholder="Ex: +32 498 78 83 54">
         </div>
         <div class="form-group">
-            <label for="sector">Secteur d'activité *</label>
+            <label for="sector">Type d'organisation *</label>
             <select id="sector" name="sector" required>
-                <option value="">Choisissez votre secteur...</option>
+                <option value="">Choisissez votre type d'organisation...</option>
                 <option value="tpe_pme">TPE/PME</option>
                 <option value="asbl">ASBL/Association</option>
                 <option value="independant">Indépendant/Consultant</option>
