amélioration du formulaire de contact V5

--- a/privacy.html
+++ b/privacy.html
@@ -7,6 +7,24 @@
     <meta name="description" content="Politique de confidentialité pour les services de Copilote Business par Laetitia Vanderheyden.">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/animations.css">
+    <style>
+        .privacy-content {
+            font-size: 0.9rem;
+            line-height: 1.6;
+        }
+        .privacy-content h1 {
+            font-size: 2.2rem;
+        }
+        .privacy-content h2 {
+            font-size: 1.4rem;
+        }
+        .privacy-content p {
+            font-size: 0.9rem;
+        }
+        .privacy-content ul {
+            font-size: 0.9rem;
+        }
+    </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
