améliorations police privacy page

--- a/privacy.html
+++ b/privacy.html
@@ -9,20 +9,23 @@
     <link rel="stylesheet" href="css/animations.css">
     <style>
         .privacy-content {
-            font-size: 0.9rem;
-            line-height: 1.6;
+            font-size: 0.75rem;
+            line-height: 1.5;
         }
         .privacy-content h1 {
-            font-size: 2.2rem;
+            font-size: 1.8rem;
         }
         .privacy-content h2 {
-            font-size: 1.4rem;
+            font-size: 1.1rem;
         }
         .privacy-content p {
-            font-size: 0.9rem;
+            font-size: 0.75rem;
         }
         .privacy-content ul {
-            font-size: 0.9rem;
+            font-size: 0.75rem;
+        }
+        .privacy-content li {
+            font-size: 0.75rem;
         }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
