--- a/privacy.html
+++ b/privacy.html
@@ -9,23 +9,28 @@
     <link rel="stylesheet" href="css/animations.css">
     <style>
         .privacy-content {
-            font-size: 0.75rem;
-            line-height: 1.5;
+            font-size: 0.65rem;
+            line-height: 1.4;
         }
         .privacy-content h1 {
-            font-size: 1.8rem;
+            font-size: 1.5rem;
         }
         .privacy-content h2 {
-            font-size: 1.1rem;
+            font-size: 0.95rem;
         }
         .privacy-content p {
-            font-size: 0.75rem;
+            font-size: 0.65rem;
         }
         .privacy-content ul {
-            font-size: 0.75rem;
+            font-size: 0.65rem !important;
+            padding-left: 1.5rem !important;
+            margin-left: 0.8rem !important;
+            list-style-position: outside !important;
         }
         .privacy-content li {
-            font-size: 0.75rem;
+            font-size: 0.65rem !important;
+            margin-bottom: 0.3rem !important;
+            padding-left: 0.2rem !important;
         }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
