améliorations police privacy page v4

--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
         <!-- Phrase SEO entre partenaires et footer -->
         <section class="seo-phrase-section">
             <div class="container">
-                <p class="seo-phrase-text">Consultance administrative & optimisation des processus pour TPE, PME et ASBL à Liège et en Wallonie. Audit, digitalisation, gestion documentaire, créances et formations IA appliquée.</p>
+                <p class="seo-phrase-text">Consultance administrative & optimisation des processus pour TPE, PME et ASBL à Liège et en Wallonie.<br>Audit, digitalisation, gestion documentaire, créances et formations IA appliquée.</p>
             </div>
         </section>
     </main>
