améliorations premium page CSS v8

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <link rel="icon" type="image/x-icon" href="public/favicon.ico">
 </head>
 <body>
+    <div class="scroll-progress"></div>
     <header id="header">
         <nav class="container">
             <div class="logo">
@@ -708,7 +709,7 @@
         <!-- Phrase SEO entre partenaires et footer -->
         <section class="seo-phrase-section">
             <div class="container">
-                <p class="seo-phrase-text">Consultance administrative & optimisation des processus pour TPE, PME et ASBL à Liège et en Wallonie.<br>Audit, digitalisation, gestion documentaire, créances et formations IA appliquée.</p>
+                <p class="seo-phrase-text">Consultance administrative & optimisation des processus pour TPE, PME et ASBL à Liège et en Wallonie.<br>Audit, digitalisation, gestion documentaire, créances et formations IA.</p>
             </div>
         </section>
     </main>
